WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187555
[WinCairo] MIME type registry doesn't explicitly recognize *.xht
https://bugs.webkit.org/show_bug.cgi?id=187555
Summary
[WinCairo] MIME type registry doesn't explicitly recognize *.xht
Ross Kirsling
Reported
2018-07-11 10:08:20 PDT
[WinCairo] MIME type registry doesn't explicitly recognize *.xht
Attachments
Patch
(1.78 KB, patch)
2018-07-11 10:13 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2018-07-11 10:13:34 PDT
Created
attachment 344766
[details]
Patch
WebKit Commit Bot
Comment 2
2018-07-11 12:22:14 PDT
Comment on
attachment 344766
[details]
Patch Clearing flags on attachment: 344766 Committed
r233737
: <
https://trac.webkit.org/changeset/233737
>
WebKit Commit Bot
Comment 3
2018-07-11 12:22:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-07-11 12:23:23 PDT
<
rdar://problem/42084116
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug