[WinCairo] MIME type registry doesn't explicitly recognize *.xht https://bugs.webkit.org/show_bug.cgi?id=187555

Reviewed by Konstantin Tokarev.

Follow-up to r233715 -- WinCairo bots are failing on *.xht layout tests as they lack a registry key for this filetype.
(Hopefully this is the last one to add.)

* platform/win/MIMETypeRegistryWin.cpp:
(WebCore::MIMETypeRegistry::getMIMETypeForExtension):
Add *.xht to the list of recognized filetypes.


Canonical link: https://commits.webkit.org/202789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233737 268f45cc-cd09-0410-ab3c-d52691b4dbfc